[front] fix: snackbar size on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,6 +69,10 @@ html.embedded .notistack-SnackbarContainer.belowTopBar {
   .notistack-SnackbarContainer.belowTopBar {
     width: auto;
   }
+
+  .notistack-SnackbarContainer.belowTopBar .notistack-Snackbar {
+    min-width: unset;
+  }
 }
 
 
